# pySigma-backend-signals

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
sigma/backends/signals/: __init__.py  signals.py
sigma/pipelines/signals/: __init__.py  mappings.py  signals.py
tests/: test_backend_signals.py  test_backend_signals_correlations.py  test_pipelines_signals.py  test_sigma_cli_integration_signals.sh  test_sigma_rule.yml
