[tool.poetry]
name = "pySigma-backend-signals"
version = "0.1.1"
description = "pySigma signals backend"
authors = ["Wayne Silva <wayne@csrs.ltd>"]
license = "LGPL-3.0-only"
repository = "https://github.com/wayne-csrs/pySigma-backend-signals"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pysigma = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
defusedxml = "^0.7"
pytest = "^8.0.0"
pytest-cov = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
